Rewrite grub.cfg to include each multiboot module in User.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,8 +142,8 @@ if(CMAKE_CROSSCOMPILING)
     set(BUILD_ISO_TOOL "${CMAKE_SOURCE_DIR}/scripts/make_iso.sh")
     add_custom_command(
         OUTPUT ${CMAKE_PROJECT_NAME}.iso
-        COMMAND ${BUILD_ISO_TOOL} ${CMAKE_BINARY_DIR}/${KERNEL_BIN} "${CMAKE_SOURCE_DIR}/grub.cfg" ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.iso ${MODULES}
-        DEPENDS ${BUILD_ISO_TOOL} ${CMAKE_BINARY_DIR}/${KERNEL_BIN} "${CMAKE_SOURCE_DIR}/grub.cfg" ${MODULES}
+        COMMAND ${BUILD_ISO_TOOL} ${CMAKE_BINARY_DIR}/${KERNEL_BIN} "${CMAKE_SOURCE_DIR}/grub.cfg.erb" ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.iso ${MODULES}
+        DEPENDS ${BUILD_ISO_TOOL} ${CMAKE_BINARY_DIR}/${KERNEL_BIN} "${CMAKE_SOURCE_DIR}/grub.cfg.erb" ${MODULES}
         COMMENT "Build the bootable ISO."
         VERBATIM
     )
