Begin writing ELF32 parser and tests.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -37,6 +37,8 @@ set(SOURCE_FILES
     "include/common/shared_pointer.hpp"
     "include/common/unique_pointer.hpp"
     "include/common/cmpxchg.h" "src/cmpxchg.c"
+    "include/common/elf32.hpp"
+    "include/common/elf32_parser.hpp"
 
     "include/common/test/mock_memory_management_unit.hpp"
     )
@@ -71,6 +73,7 @@ else(CMAKE_CROSSCOMPILING)
                    "test/test_ring_buffer.cpp"
                    "test/test_stdio.cpp"
                    "test/test_shared_pointer.cpp"
+                   "test/test_elf32.cpp"
                    )
 
     target_link_libraries(CommonTest
