--- a/User/CMakeLists.txt
+++ b/User/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 
 if (CMAKE_CROSSCOMPILING)
-set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -ffreestanding -nostdlib -Wl,--oformat=binary")
+set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -ffreestanding -nostdlib")
 add_executable(Test1 "src/test1.S")
 add_executable(Test2 "src/test2.S")
 set(MODULES
