Add LockGuard class and move perform_with_lock to different header.
These two things should not live in spin_lock.hpp

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -34,6 +34,8 @@ set(SOURCE_FILES
     "include/common/bit_array.hpp"
     "include/common/spin_lock.hpp" "include/common/spin_lock.h" "src/spin_lock.c"
     "include/common/mutex.hpp" "src/mutex.cpp"
+    "include/common/lock_guard.hpp"
+    "include/common/perform_with_lock.hpp"
     "include/common/shared_pointer.hpp"
     "include/common/unique_pointer.hpp"
     "include/common/cmpxchg.h" "src/cmpxchg.c"
