--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -114,6 +114,7 @@ set(X86_64_SOURCE_FILES
     "include/platform/i386/page_frame_controller.hpp"
     "include/platform/i386/generic_page_map_level_one_controller.hpp"
     "include/platform/x86_64/page_map_level_one_controller.hpp"
+    "include/platform/x86_64/page_map_level_two_controller.hpp"
     )
 
 set(PC_SOURCE_FILES
@@ -219,6 +220,7 @@ if (NOT CMAKE_CROSSCOMPILING)
              "test/test_x86_64_kernel_address_space_bootstrapper.cpp"
              "test/test_i386_page_frame_controller.cpp"
              "test/test_x86_64_page_map_level_one_controller.cpp"
+             "test/test_x86_64_page_map_level_two_controller.cpp"
              )
     endif ()
 
