Remove libMalloc. Fold into libCommon.
It's not really gaining me anything to separate libMalloc and libCommon.
Merge the two libraries into one.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -44,6 +44,8 @@ set(SOURCE_FILES
     "include/common/elf32_parser.hpp"
     "include/common/elf64_parser.hpp"
     "include/common/data.hpp"
+
+    "include/malloc/malloc_zone.hpp" "src/malloc_zone.cpp"
     )
 
 if(CMAKE_CROSSCOMPILING)
@@ -78,6 +80,7 @@ else(CMAKE_CROSSCOMPILING)
                    "test/test_shared_pointer.cpp"
                    "test/test_elf32.cpp"
                    "test/test_elf64.cpp"
+                   "test/test_malloc_zone.cpp"
                    )
 
     target_link_libraries(CommonTest
