--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ if(CMAKE_CROSSCOMPILING)
     set(CMAKE_C_FLAGS "${COMMON_COMPILER_FLAGS} ${COMPILER_FLAGS_C_AND_CXX} ${CMAKE_C_FLAGS}")
     set(CMAKE_C_LINK_FLAGS "${LINKER_FLAGS_C_AND_CXX} ${CMAKE_C_LINK_FLAGS}")
 
-    set(CMAKE_CXX_FLAGS "-fno-exceptions -fno-rtti ${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS} ${${COMMON_COMPILER_FLAGS}}")
+    set(CMAKE_CXX_FLAGS "-fcheck-new -fno-exceptions -fno-rtti ${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS} ${${COMMON_COMPILER_FLAGS}}")
     set(CMAKE_CXX_LINK_FLAGS "${LINKER_FLAGS_C_AND_CXX} ${CMAKE_CXX_LINK_FLAGS}")
 
     set(CMAKE_ASM_FLAGS "${BUILD_ARCH_FLAGS}")
