Added Optional<T> with some monadic tools as in p0798r0.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SOURCE_FILES
     "include/common/elf32_parser.hpp"
     "include/common/elf64_parser.hpp"
     "include/common/data.hpp"
+    "include/common/optional.hpp"
 
     "include/malloc/malloc_zone.hpp" "src/malloc_zone.cpp"
     )
@@ -81,6 +82,7 @@ else(CMAKE_CROSSCOMPILING)
                    "test/test_elf32.cpp"
                    "test/test_elf64.cpp"
                    "test/test_malloc_zone.cpp"
+                   "test/test_optional.cpp"
                    )
 
     target_link_libraries(CommonTest
