The CMake build script needs a dependency on the linker script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ if(CMAKE_CROSSCOMPILING)
         PREFIX ""
         SUFFIX ""
         LINK_FLAGS "-T ${KERNEL_LAYOUT_FILE}"
+        LINK_DEPENDS "${KERNEL_LAYOUT_FILE_TEMPLATE}"
     )
     
     # Add a custom target for the CD-ROM ISO image. Specify dependencies so that the
