Use Expected<T> as return value from the ELF loader factory.
We're not actually testing for any real error conditions, but this is the
mechanism through which those errors would be reported.

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCE_FILES
     "include/common/elf32_parser.hpp"
     "include/common/elf64_parser.hpp"
     "include/common/data.hpp"
+    "include/common/error.hpp"
     "include/common/either.hpp"
     "include/common/optional.hpp"
     "include/common/expected.hpp"
