Actually turn on exceptions for the project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,10 +55,10 @@ if(CMAKE_CROSSCOMPILING)
     set(CMAKE_C_FLAGS "${COMMON_COMPILER_FLAGS} ${COMPILER_FLAGS_C_AND_CXX} ${CMAKE_C_FLAGS}")
     set(CMAKE_C_LINK_FLAGS "${LINKER_FLAGS_C_AND_CXX} ${CMAKE_C_LINK_FLAGS}")
 
-    set(CMAKE_CXX_FLAGS "-fcheck-new -fno-exceptions -fno-rtti ${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${COMPILER_FLAGS_C_AND_CXX} ${COMMON_COMPILER_FLAGS} ${CMAKE_CXX_FLAGS}")
     set(CMAKE_CXX_LINK_FLAGS "${LINKER_FLAGS_C_AND_CXX} ${CMAKE_CXX_LINK_FLAGS}")
 
-    set(CMAKE_ASM_FLAGS "${BUILD_ARCH_FLAGS}")
+    set(CMAKE_ASM_FLAGS "${BUILD_ARCH_FLAGS} ${CMAKE_ASM_FLAGS}")
 
 else(CMAKE_CROSSCOMPILING)
 
