Include libcxxrt in Flapjack OS to handle C++ runtime support.
BUG: Multithreaded exception handling is probably going to be broken until
those pthread stubs in the libcxxrt/ directory are fleshed out.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ endfunction(GenerateSourceFromTemplate)
 
 
 # Setup compiler flags before building the subdirectories.
-set(COMMON_COMPILER_FLAGS "-Wall -Wextra -Werror")
+set(COMMON_COMPILER_FLAGS "-Wall -Werror -Wno-unused-parameter")
 if(CMAKE_CROSSCOMPILING)
 
     set(BUILD_ARCH "${CMAKE_SYSTEM_PROCESSOR}")
